[package]
name = "webcrustacean"
version = "0.3.0-alpha"
authors = ["Bas Hickendorff <hickendorffbas@gmail.com>"]
edition = "2018"

[features]
default = [
    #"timings",
]
timings = []


[dependencies.sdl2]
version = "=0.34.2"
default-features = false
features = ["ttf", "image", "gfx", "mixer"]

[dependencies.reqwest]
version = "=0.11.3"
features = ["blocking"]

[dependencies.image]
version = "=0.24.7"

[dependencies.arboard]
version = "=3.3.0"

[dependencies.threadpool]
version = "=1.8.1"

[dependencies.rusttype]
version = "=0.9.3"
