[package]
name = "webcrustacean"
version = "0.5.0"
authors = ["Bas Hickendorff <hickendorffbas@gmail.com>"]
edition = "2021"

[features]
default = [
    #"timings",
]
timings = []


[dependencies.sdl2]
version = "=0.37.0"
default-features = false
features = ["image", "gfx", "mixer"]

[dependencies.reqwest]
version = "=0.12.12"
features = ["blocking"]

[dependencies.image]
version = "=0.25.5"

[dependencies.arboard]
version = "=3.4.1"

[dependencies.threadpool]
version = "=1.8.1"

[dependencies.rusttype]
version = "=0.9.3"
