[package]
name = "webcrustacean"
version = "0.7.0"
authors = ["Bas Hickendorff <hickendorffbas@gmail.com>"]
edition = "2021"

[features]
default = [
    #"timings",
]
timings = []


[dependencies.arboard]
version = "=3.4.1"

[dependencies.chrono]
version = "=0.4.41"

[dependencies.image]
version = "=0.25.5"

[dependencies.reqwest]
version = "=0.12.12"
features = ["blocking"]

[dependencies.rusttype]
version = "=0.9.3"

[dependencies.sdl2]
version = "=0.37.0"
default-features = false
features = ["image", "gfx", "mixer"]

[dependencies.threadpool]
version = "=1.8.1"
